--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      JOB1-RunScripts:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      #- uses: actions/checkout@v2
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo "Hello Actions"
+        - name: Run a one-line script
+          run: echo "Hello Actions"
       
-      - run: echo "Hello Actions2"
+      # Job without name
+        - run: echo "Hello Actions2"
+        - run: echo "This action is ran from - ${{github.repo}} repository"
 
