--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     # Job without name, 
-      - name: "Say Hello"
+      - name: "Say Hello step"
         run: echo "Hello Action"
     
-    # No name Job
-      - run: echo "Hello from no name job"
-
       - name: "Repository Info"
         run: echo "This event is triggered from-  ${{ github.repository }} repository"
-        run: echo "The name of branch is ${{github.ref}}"
+        run: echo "The name of branch is ${{ github.ref }}"
       
 
