--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,11 @@ jobs:
       - run: echo "The branch is  ${{ github.ref }} "
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      
+      - name: Workspace details
+        run:  ${{ github.workspace }}
       
 
