--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: List files in workspace
         run: ls ${{ github.workspace }}
 
-      - run : echo "current working directory is {{ pwd }}"    
+      - run : echo "current working directory is ${{ pwd }}"    
 
       - name: "Print Job Status"
         run: echo " ${{ job.status }}"
