--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,10 +36,12 @@ jobs:
 
       - name: List files in workspace
         run: ls ${{ github.workspace }}
-
-      - run : echo "current working directory is ${{ pwd }}"    
+    
+      - name: Print current directory
+      - run : pwd   
 
       - name: "Print Job Status"
         run: echo " ${{ job.status }}"
+
       
 
