--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,12 @@ jobs:
   JOB1-RunScripts:
     runs-on: ubuntu-latest
     steps:
+    # If you dont specify name for step, it will show command as name
       - name: "Say Hello step"
         run: echo "Hello Action"
     
       - name: "Repository Info"
-        run: echo "This event is triggered from-  ${{ github.repository }} repository"
-# If you dont specify name, it will show command as name
+      - run: echo "This event is triggered from-  ${{ github.repository }} repository"
       - run: echo "The branch is  ${{ github.ref_name }} "
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "Repo Url- ${{ github.repositoryUrl }} ."
