--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: "Say Hello step"
         run: echo "Hello Action"
     
-      - run: "Printing Repository Info"
+      - run: echo "Printing Repository Info"
       - run: echo "This event is triggered from-  ${{ github.repository }} repository"
       - run: echo "The branch is  ${{ github.ref_name }} "
       - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
