--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - run: echo "Repo Url- ${{ github.repositoryUrl }} ."
       - run: echo "Commit SHA ${{ github.sha }} ."
 
-      - name: Job Info
+      - run: echo "printing job info"
       - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "Job# {{ github.job }}"
 
