--- a/.github/workflows/inputsTest.yml
+++ b/.github/workflows/inputsTest.yml
@@ -1,4 +1,4 @@
-name: Test Inputs
+name: Test-Inputs
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -15,8 +15,7 @@ on:
         default: 'warning'
       tags:
         tagversion: v1
-
-      configVersion: 1.0.0
+      configVersion: '1.0.0'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
