--- a/.github/workflows/environmentsectest.yml
+++ b/.github/workflows/environmentsectest.yml
@@ -9,6 +9,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  DEV_URL: "https://docs.github.com/en/developers"
+
 jobs:
   job1:
     runs-on: ubuntu-latest
@@ -16,5 +19,6 @@ jobs:
     # If the environment cannot be found, it will be created
     environment: 
       name: DEV
+      url: ${{ env.DEV_URL }}
     steps:
       - run: echo "Creating DEV environment if not there"  
