--- a/.github/workflows/environmentsectest.yml
+++ b/.github/workflows/environmentsectest.yml
@@ -31,7 +31,7 @@ jobs:
         run: echo "Deployment to ${{ env.DEV_URL }} "
       
       - name: Step that uses the DEV config
-        run: echo "Config is ${{ env.DEV_CONFIG }} "
+        run: echo "Config for ${{ environment.name }} is ${{ env.DEV_CONFIG }} "
 
   PROD:
     runs-on: ubuntu-latest
@@ -47,6 +47,6 @@ jobs:
       - name: Step that uses the PROD environment
         run: echo "Deployment to ${{ env.PROD_URL }} "
       
-      - name: Step that uses the DEV environment
-        run: echo "Config is ${{ env.PROD_CONFIG }} "
+      - name: Step that uses the PROD config
+        run: echo "Config for ${{ environment.name }} is ${{ env.PROD_CONFIG }} "
           
