--- a/.github/workflows/environmenttest.yml
+++ b/.github/workflows/environmenttest.yml
@@ -17,7 +17,7 @@ env:
 
 
 jobs:
-  DEV:
+  job1:
     runs-on: ubuntu-latest
     # An environment can be specified per job
     # If the environment cannot be found, it will be created
@@ -34,7 +34,7 @@ jobs:
       - name: Step that uses the DEV config
         run: echo "Config is ${{ env.DEV_CONFIG }} "
 
-  PROD:
+  job2:
     runs-on: ubuntu-latest
     needs: DEV
     # An environment can be specified per job
