--- a/.github/workflows/envsectest.yml
+++ b/.github/workflows/envsectest.yml
@@ -1,3 +1,8 @@
+###############################################################
+# Environment secrets take precendence to repository secrets
+# You can have same name secret set up in repo settings under environment and repo secrets
+# If secret set under dev env, and environment used is dev it will use that if u have same name secret in repo secrets
+###########################################################
 name: Environments and Secret Test
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
@@ -17,7 +22,7 @@ env:
 
 
 jobs:
-  job1:
+  job1-DEV:
     runs-on: ubuntu-latest
     # An environment can be specified per job
     # If the environment cannot be found, it will be created
@@ -41,9 +46,16 @@ jobs:
       - name: Echo Repository secrets
         run : echo ${{ secrets.DB_PASS }} | sed 's/./& /g'
 
-  job2:
+      ##we have this secret set under dev environment and repo secrets in settings with same name
+      ## Secret under dev will have precedence
+      - name: Echo same name seceret
+        run : echo ${{ secrets.MY_SECRET }} | sed 's/./& /g'
+
+      
+
+  job2-PROD:
     runs-on: ubuntu-latest
-    needs: job1
+    needs: job1-DEV
     # An environment can be specified per job
     # If the environment cannot be found, it will be created
     environment: 
@@ -53,6 +65,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
+      # Defined under env section
       - name: Step that uses the PROD environment
         run: echo "Deployment to ${{ env.PROD_URL }} "
       
@@ -64,4 +77,9 @@ jobs:
       
       - name: Echo Repository secrets
         run : echo ${{ secrets.DB_PASS }} | sed 's/./& /g'
+      
+      ##we have this secret set under dev environment and repo secrets in settings with same name
+      ## Since this is prod env and it doesnt have override secret set up it will pick repo one
+      - name: Echo same name secret 
+        run : echo ${{ secrets.MY_SECRET }} | sed 's/./& /g'
           
