--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -1,6 +1,6 @@
 name: Concurrency Test
 on:
-  Triggers the workflow on push or pull request events but only for the master branch
+  #Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
@@ -26,6 +26,6 @@ jobs:
       
       - name: Build and code sim
         run: |
-          echo "Starting the code build"
+          echo "Starting the code build"`
           sleep 1m
           echo "Finish the code build"
