--- a/.github/workflows/concurrency.yml
+++ b/.github/workflows/concurrency.yml
@@ -26,6 +26,6 @@ jobs:
       
       - name: Build and code sim
         run: |
-          echo "Starting the code build"`
-          sleep 1m
+          echo "Starting the code build"
+          sleep 2m
           echo "Finish the code build"
