--- a/.github/workflows/concurrency2.yml
+++ b/.github/workflows/concurrency2.yml
@@ -24,7 +24,8 @@ on:
 # Concurrency can be used at workflow level or job leve
 concurrency:
 # This means concurrency will check against only particular branches
-  group: build-and-test-on-pr-${{ github.head_ref }}
+  # group: build-and-test-on-pr-${{ github.head_ref }}
+  group: build-and-test-on-pr-${{ github.ref }}
   
   # If this is enabled it will cancel current running and start latest
   cancel-in-progress: true
