--- a/.github/workflows/reuseworkflowcaller.yml
+++ b/.github/workflows/reuseworkflowcaller.yml
@@ -4,11 +4,11 @@
 
 name: Reuse Workflow caller
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
-  # push:
-  #   branches: [ master ]
-  # pull_request:
-  #   branches: [ master ]
+  Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -17,7 +17,7 @@ jobs:
   build-image:
     runs-on: ubuntu-latest
     # provide path of workflow, it should be public, in same repo or same org
-    uses: C:\aw\repos\helloWorld\.github\workflows\reuseworkflow.yml@master
+    uses: .github\workflows\reuseworkflow.yml@master
 
     #Inputs and secrets are defined in parent workflow we calling. We provide values here
     with:
