--- a/.github/workflows/reuseworkflowcaller.yml
+++ b/.github/workflows/reuseworkflowcaller.yml
@@ -4,7 +4,7 @@
 
 name: Reuse Workflow caller
 on:
-  Triggers the workflow on push or pull request events but only for the master branch
+  #Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
