--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -18,6 +18,10 @@ jobs:
       - name: "Dump Runner Context"
         run: echo "${{ toJSON(runner) }}"
     # You can drill to individual as well
-      - run: echo "${{ runner.os }}"
-      - run: echo "${{ runner.workspace }}"
-      
+      - run: echo "Printing runner OS- ${{ runner.os }}"
+      - run: echo "Printing runner workspace path- ${{ runner.workspace }}"
+    
+    # There are many other contexts you can use...print all to see or see github docs for each
+    # This prints all
+      - name: "Dump Github Contexts"
+        run: echo ${{ toJSON(github) }}     
