--- a/.github/workflows/contextTest.yml
+++ b/.github/workflows/contextTest.yml
@@ -24,4 +24,11 @@ jobs:
     # There are many other contexts you can use...print all to see or see github docs for each
     # This prints all
       - name: "Dump Github Contexts"
-        run: echo '${{ toJSON(github) }}'     
+        run: echo '${{ toJSON(github) }}'
+
+        #individual github contexts values
+        - run: echo "Printing repo - ${{ runner.os }}"
+        - run: echo "Printing repo url - ${{ runner.os }}"
+        - run: echo "Printing sha- ${{ runner.os }}"
+        - run: echo "Printing branch- ${{ runner.os }}"
+        - run: echo "Printing runner OS- ${{ runner.os }}"
